<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_offboard_demo_py</name>
  <version>0.0.1</version>
  <description>ROS2 package for PX4 takeoff and velocity control</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>cdinit_ros2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
