cmake_minimum_required(VERSION 3.8)
project(dds_agent VERSION 0.1.0 LANGUAGES CXX)

set(UAGENT_SUPERBUILD       "OFF"   CACHE STRING "" FORCE)
set(UAGENT_ISOLATED_INSTALL "OFF"   CACHE STRING "" FORCE)
set(BUILD_SHARED_LIBS       "OFF"   CACHE STRING "" FORCE)
set(UAGENT_P2P_PROFILE          "OFF"    CACHE STRING "" FORCE)
set(UAGENT_USE_SYSTEM_FASTDDS   "ON"    CACHE STRING "" FORCE)
set(UAGENT_USE_SYSTEM_FASTCDR   "ON"    CACHE STRING "" FORCE)
#set(UAGENT_USE_SYSTEM_LOGGER   "ON"    CACHE STRING "" FORCE)

add_subdirectory(../Micro-XRCE-DDS-Agent/Micro-XRCE-DDS-Agent ${CMAKE_CURRENT_BINARY_DIR}/Micro-XRCE-DDS-Agent)

